fix #7114 | fix image-container box overflow

--- a/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-main/edit-employee-main.component.scss
+++ b/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-main/edit-employee-main.component.scss
@@ -24,6 +24,7 @@ $radius: nb-theme(border-radius);
 
 :host {
   padding: 0;
+  padding-bottom: 1rem;
   overflow-y: auto;
   max-height: calc(100vh - 20.5rem);
   border-radius: 0 $radius $radius $radius;
